# WIRBLE

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
dependencies/: CMakeLists.txt  Makefile.am  api-boilerplate.h  lmdb.h  meson.build  mu-port.h
docs/: CMakeLists.txt  Doxyfile.in  Makefile.am  conf.py  meson.build
examples/: Makefile.am  meson.build
examples/common/: frontend.c  frontend.h  wirble_expr.g
examples/iwirble/: main.c
examples/wirblecc/: main.c
include/wirble/: wirble-mal.h  wirble-mds.h  wirble-tos.h  wirble-wil.h  wirble-wrs.h  wirble-wvm.h
machines/: CMakeLists.txt  Makefile.am  aarch64.yaml  meson.build  wasm.xml  x86_64.json
manifests/: CMakeLists.txt  Makefile.am  SourceManifest.yaml  ToolchainManifest.yaml  meson.build
manifests/grammars/: WRS.ebnf
manifests/schema/: MDS-Schema.xsd
schema/: MDS-Schema.json  MDS-Schema.yaml
scripts/: verify-stage1.sh
src/wirble/common/: arena.c  arena.h  bytebuf.c  bytebuf.h  diagnostics.c  diagnostics.h  strpool.c  strpool.h
src/wirble/mal/: mal_builder.c  mal_ir.c  mal_ir.h  mal_printer.c  mal_validate.c  mrs_apply.c  mrs_debug.c  mrs_loader.c  mrs_match.c
src/wirble/mds/: mds_patterns.c  mds_printer.c  mds_selector.c  mds_tables.c
src/wirble/support/: filemap.c  filemap.h  hash_table.c  hash_table.h  sexp_reader.c  sexp_reader.h
src/wirble/tos/: tos_opt.c  tos_printer.c  tos_stream.c  tos_stream.h
src/wirble/wil/: wil_builder.c  wil_builder.h  wil_lower_ast.c  wil_nodes.c  wil_nodes.h  wil_printer.c  wil_validate.c
src/wirble/wrs/: wrs_apply.c  wrs_debug.c  wrs_internal.h  wrs_loader.c  wrs_match.c  wrs_parser.c  wrs_system.c
src/wirble/wvm/: wvm_emit.c  wvm_encoder.c  wvm_encoder.h  wvm_printer.c  wvm_runtime.c
stdrewrite/: CMakeLists.txt  Makefile.am  README.md  arithmetic.wrs  canonical.wrs  logic.wrs  mal_peephole.wrs  meson.build
toolchain/: CMakeLists.txt  Makefile.am  mal-lower.c  mal-opt.c  mds-select.c  meson.build  tos-build.c  wil-lower.c  wrs-rewrite.c  wvm-emit.c  wvm-run.c
toolchain/wrs/: README.md  wirble-wrs.c
