ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	dependencies \
	stdrewrite \
	manifests \
	machines \
	toolchain \
	examples \
	docs

EXTRA_DIST = \
	README.md \
	configure.ac \
	meson.build \
	meson_options.txt \
	docs/meson.build \
	dependencies/CMakeLists.txt \
	stdrewrite/CMakeLists.txt \
	manifests/CMakeLists.txt \
	machines/CMakeLists.txt \
	toolchain/CMakeLists.txt
