wirbleincludedir = $(includedir)/wirble
wirbleinclude_HEADERS = \
	$(top_srcdir)/include/wirble/wirble-mal.h \
	$(top_srcdir)/include/wirble/wirble-mds.h \
	$(top_srcdir)/include/wirble/wirble-tos.h \
	$(top_srcdir)/include/wirble/wirble-wil.h \
	$(top_srcdir)/include/wirble/wirble-wrs.h \
	$(top_srcdir)/include/wirble/wirble-wvm.h

include_HEADERS = \
	api-boilerplate.h \
	hedley.h \
	lmdb.h

EXTRA_DIST = $(wirbleinclude_HEADERS) $(include_HEADERS)
