install_headers(
  '../include/wirble/wirble-mal.h',
  '../include/wirble/wirble-mds.h',
  '../include/wirble/wirble-tos.h',
  '../include/wirble/wirble-wil.h',
  '../include/wirble/wirble-wrs.h',
  '../include/wirble/wirble-wvm.h',
  subdir : 'wirble'
)

install_headers(
  'api-boilerplate.h',
  'hedley.h',
  'lmdb.h'
)
