install(TARGETS wirble EXPORT wirbleTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

if(INSTALL_TOOLCHAIN)
  foreach(WIRBLE_RUNTIME_TARGET
    wirblecc
    iwirble
    wil-lower
    wrs-rewrite
    mal-lower
    mal-opt
    mds-select
    tos-build
    wvm-emit
    wvm-run
  )
    install(
      CODE
        "if(EXISTS \"${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/${WIRBLE_RUNTIME_TARGET}${CMAKE_EXECUTABLE_SUFFIX}\")\n  file(INSTALL DESTINATION \"\${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}\" TYPE EXECUTABLE FILES \"${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/${WIRBLE_RUNTIME_TARGET}${CMAKE_EXECUTABLE_SUFFIX}\")\nelseif(EXISTS \"${CMAKE_BINARY_DIR}/${WIRBLE_RUNTIME_TARGET}${CMAKE_EXECUTABLE_SUFFIX}\")\n  file(INSTALL DESTINATION \"\${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}\" TYPE EXECUTABLE FILES \"${CMAKE_BINARY_DIR}/${WIRBLE_RUNTIME_TARGET}${CMAKE_EXECUTABLE_SUFFIX}\")\nendif()"
    )
  endforeach()
endif()
